--- a/info.ini
+++ b/info.ini
@@ -1,9 +1,9 @@
 name = unishop
-title = 喂喂商城
+title = uniShop移动商城
 intro = 安全，可靠，快速，闭环，方便扩展
 author = joelzheng
 website = https://www.fastadmin.net/store/unishop.html
-version = 2.0.1
+version = 2.0.2
 state = 0
 url = /addons/unishop
 license = regular
